--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
-<!--footerFragment 선언-->
-<div th:fragment="footerFragment">
-    <h1>Footer Section</h1>
-</div>
+
+<!-- Footer -->
+<th:block th:fragment="footerFragment">
+    <!-- Footer -->
+    <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+            <div class="copyright text-center my-auto">
+                <span>Copyright &copy; Your Website 2021</span>
+            </div>
+        </div>
+    </footer>
+    <!-- End of Footer -->
+</th:block>
+
 </html>
